# geochallenge-ai-2009

./: CTicTac.cpp  CTicTac.h  LEEME.html  README.html  README.md  data.h  level1.cpp  screen_capture.cpp  screen_capture.h  utils.cpp  waitmainscreen.cpp
app/: CMakeLists.txt  COCREngine.cpp  COCREngine.h  level2.cpp  level3.cpp  level4.cpp  main.cpp  utils.h
app/tesseract_ocr/ccmain/: tessembedded.cpp
app/tesseract_ocr/image/: img.h  imgtiff.cpp
imagenes_utiles/: intro.xcf
tesseract_ocr/ccmain/: tesseractmain.cpp
tesseract_ocr/image/: imgs.cpp
